--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "autoprefixer": "^10.4.17",
     "framer-motion": "^11.0.3",
+    "lucide-react": "^0.321.0",
+    "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
